--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-h1{
-    text-align: center;
-}
+code{
+    background-color: var(--code-bg-color);
+    color: var(--code-color);
+    border-radius: 4px;
+    padding: 1px 6px;
+    /* padding: 0.15rem 0.4rem; */
+    margin-bottom: 1px;
+    display: inline-block;
+};
