--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "IBM Plex Mono", monospace;
 }
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: rgb(42, 41, 41);
-  color: white;
+  min-height: 100vh;
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+body.light,
+body.dark {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* [lang="ar"] body{
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+} */
+[dir="rtl"] *{
+  font-family: "IBM Plex Sans Arabic", sans-serif;
 }
